--- a/html/index.html
+++ b/html/index.html
@@ -1,11 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LMTracker</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    Hello, world!
+    <div id="app">
+        <div id="login-container" class="container d-none">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-4">
+                    <div class="card shadow-lg mt-5">
+                        <div class="card-header bg-dark text-center">
+                            <h3 class="text-orange">LMTracker</h3>
+                        </div>
+                        <div class="card-body">
+                            <form id="login-form">
+                                <div class="mb-3">
+                                    <label for="username" class="form-label">Username</label>
+                                    <input type="text" class="form-control" id="username" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="password" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="password" required>
+                                </div>
+                                <div class="d-grid">
+                                    <button type="submit" class="btn btn-orange">Login</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="main-container" class="d-none">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark-secondary">
+                <div class="container-fluid">
+                    <span class="navbar-brand text-orange">LMTracker</span>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#" id="projects-link">Projects</a>
+                            </li>
+                        </ul>
+                        <div class="d-flex">
+                            <span class="navbar-text me-3" id="user-info"></span>
+                            <button class="btn btn-outline-orange" id="logout-btn">Logout</button>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="container-fluid mt-3">
+                <div id="projects-view">
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                        <h2 class="text-orange">Projects</h2>
+                        <button class="btn btn-orange" id="new-project-btn">New project</button>
+                    </div>
+                    <div class="row" id="projects-list"></div>
+                </div>
+
+                <div id="project-details" class="d-none">
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                        <h2 class="text-orange" id="project-name"></h2>
+                        <div>
+                            <div class="dropdown d-inline-block">
+                                <button class="btn btn-orange dropdown-toggle" type="button" id="runsDropdown"
+                                    data-bs-toggle="dropdown">
+                                    Select runs
+                                </button>
+                                <div class="dropdown-menu p-3 runs-dropdown-menu" id="runs-dropdown">
+                                    <div class="mb-2">
+                                        <h6>Runs</h6>
+                                        <div class="runs-select-btns">
+                                            <button class="btn btn-sm btn-outline-orange" id="select-all-runs">Select
+                                                all</button>
+                                            <button class="btn btn-sm btn-outline-orange"
+                                                id="deselect-all-runs">Deselect all</button>
+                                        </div>
+                                        <input type="text" class="form-control form-control-sm mt-2" id="runs-search"
+                                            placeholder="Search runs...">
+                                    </div>
+                                    <div class="runs-list" id="runs-list"></div>
+                                    <div class="d-grid mt-2">
+                                        <button class="btn btn-orange btn-sm" id="apply-runs-selection">Apply</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="metrics-container"></div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="new-project-modal" tabindex="-1">
+                <div class="modal-dialog">
+                    <div class="modal-content bg-dark-secondary">
+                        <div class="modal-header">
+                            <h5 class="modal-title text-orange">New project</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body">
+                            <form id="new-project-form">
+                                <div class="mb-3">
+                                    <label for="project-name-input" class="form-label">Project name</label>
+                                    <input type="text" class="form-control" id="project-name-input" required>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-outline-secondary"
+                                data-bs-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-orange" id="create-project-btn">Create</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="fullscreen-chart-modal" tabindex="-1">
+                <div class="modal-dialog modal-fullscreen">
+                    <div class="modal-content bg-dark-secondary">
+                        <div class="modal-header">
+                            <h5 class="modal-title text-orange" id="fullscreen-chart-title"></h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div id="fullscreen-chart-container" style="width: 100%; height: 85vh;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="loading-container" class="d-flex justify-content-center align-items-center vh-100">
+            <div class="text-center">
+                <div class="spinner-border text-orange mb-3" style="width: 3rem; height: 3rem;"></div>
+                <h4 class="text-orange">Loading...</h4>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="scripts.js"></script>
 </body>
+
 </html>
