fix: Update dropdown behavior and improve delete confirmation message

--- a/html/index.html
+++ b/html/index.html
@@ -78,7 +78,7 @@
                                     data-bs-toggle="dropdown">
                                     Select runs
                                 </button>
-                                <div class="dropdown-menu p-3 runs-dropdown-menu" id="runs-dropdown">
+                                <div class="dropdown-menu p-3 runs-dropdown-menu" id="runs-dropdown" data-bs-auto-close="outside">
                                     <div class="mb-2">
                                         <h6>Runs</h6>
                                         <div class="runs-select-btns">
