--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,149 +8,132 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div id="app">
-        <div id="login-container" class="container d-none">
-            <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-4">
-                    <div class="card shadow-lg mt-5">
-                        <div class="card-header bg-dark text-center">
-                            <h3 class="text-orange">LMTracker</h3>
-                        </div>
-                        <div class="card-body">
-                            <form id="login-form">
-                                <div class="mb-3">
-                                    <label for="username" class="form-label">Username</label>
-                                    <input type="text" class="form-control" id="username" required>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="password" class="form-label">Password</label>
-                                    <input type="password" class="form-control" id="password" required>
-                                </div>
-                                <div class="d-grid">
-                                    <button type="submit" class="btn btn-orange">Login</button>
-                                </div>
-                            </form>
-                        </div>
+    <div id="app" class="d-flex flex-column">
+        <nav id="navbar" class="navbar navbar-expand-lg border-bottom border-secondary border-opacity-25 d-none flex-shrink-0">
+            <div class="container-fluid">
+                <a class="navbar-brand fw-bold text-white" href="https://github.com/omni-devel/lmtracker" target="_blank">
+                    <i class="bi bi-github me-2"></i>LMTracker
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navContent">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#" id="nav-projects">Projects</a>
+                        </li>
+                    </ul>
+                    <div class="d-flex align-items-center gap-3 mt-3 mt-lg-0">
+                        <span class="text-secondary small" id="user-display"></span>
+                        <button class="btn btn-sm btn-outline-light" id="btn-logout">
+                            <i class="bi bi-box-arrow-right me-1"></i> Logout
+                        </button>
                     </div>
                 </div>
             </div>
-        </div>
+        </nav>
 
-        <div id="main-container" class="d-none">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark-secondary">
-                <div class="container-fluid">
-                    <span class="navbar-brand text-orange">LMTracker</span>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                        <span class="navbar-toggler-icon"></span>
+        <main class="flex-grow-1 position-relative app-main">
+            <div id="view-login" class="container h-100 d-flex align-items-center justify-content-center d-none">
+                <div class="card login-card shadow-lg border-0 my-5">
+                    <div class="card-body p-5">
+                        <h2 class="text-center mb-4 fw-bold text-white">Welcome Back</h2>
+                        <form id="form-login">
+                            <div class="mb-3">
+                                <label class="form-label text-secondary small text-uppercase">Username</label>
+                                <input type="text" class="form-control bg-dark text-white border-secondary" id="input-username" required>
+                            </div>
+                            <div class="mb-4">
+                                <label class="form-label text-secondary small text-uppercase">Password</label>
+                                <input type="password" class="form-control bg-dark text-white border-secondary" id="input-password" required>
+                            </div>
+                            <button type="submit" class="btn btn-light w-100 fw-bold py-2">Login</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div id="view-projects" class="container-fluid p-4 d-none scrollable-view">
+                <div class="d-flex justify-content-between align-items-center mb-4 flex-wrap gap-2">
+                    <h3 class="text-white fw-light m-0">Your Projects</h3>
+                    <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modal-new-project">
+                        <i class="bi bi-plus-lg me-1"></i> New Project
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav me-auto">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#" id="projects-link">Projects</a>
-                            </li>
-                        </ul>
-                        <div class="d-flex">
-                            <span class="navbar-text me-3" id="user-info"></span>
-                            <button class="btn btn-outline-orange" id="logout-btn">Logout</button>
-                        </div>
-                    </div>
                 </div>
-            </nav>
+                <div id="projects-grid" class="row g-4"></div>
+            </div>
 
-            <div class="container-fluid mt-3">
-                <div id="projects-view">
-                    <div class="d-flex justify-content-between align-items-center mb-4">
-                        <h2 class="text-orange">Projects</h2>
-                        <button class="btn btn-orange" id="new-project-btn">New project</button>
-                    </div>
-                    <div class="row" id="projects-list"></div>
-                </div>
-
-                <div id="project-details" class="d-none">
-                    <div class="d-flex justify-content-between align-items-center mb-4">
-                        <h2 class="text-orange" id="project-name"></h2>
-                        <div>
-                            <div class="dropdown d-inline-block">
-                                <button class="btn btn-orange dropdown-toggle" type="button" id="runsDropdown"
-                                    data-bs-toggle="dropdown">
-                                    Select runs
-                                </button>
-                                <div class="dropdown-menu p-3 runs-dropdown-menu" id="runs-dropdown" data-bs-auto-close="outside">
-                                    <div class="mb-2">
-                                        <h6>Runs</h6>
-                                        <div class="runs-select-btns">
-                                            <button class="btn btn-sm btn-outline-orange" id="select-all-runs">Select
-                                                all</button>
-                                            <button class="btn btn-sm btn-outline-orange"
-                                                id="deselect-all-runs">Deselect all</button>
-                                        </div>
-                                        <input type="text" class="form-control form-control-sm mt-2" id="runs-search"
-                                            placeholder="Search runs...">
-                                    </div>
-                                    <div class="runs-list" id="runs-list"></div>
-                                    <div class="d-grid mt-2">
-                                        <button class="btn btn-orange btn-sm" id="apply-runs-selection">Apply</button>
-                                    </div>
-                                </div>
+            <div id="view-dashboard" class="container-fluid dashboard-container d-none">
+                <div class="row h-100 dashboard-row">
+                    <div class="col-md-3 col-lg-2 bg-surface dashboard-sidebar d-flex flex-column p-0">
+                        <div class="p-3 border-bottom border-secondary border-opacity-25">
+                            <button class="btn btn-sm btn-outline-secondary mb-2 w-100" id="btn-back-projects">
+                                <i class="bi bi-arrow-left"></i> Back to Projects
+                            </button>
+                            <h5 class="text-white text-truncate mt-2" id="current-project-name">Project</h5>
+                            <input type="text" class="form-control form-control-sm bg-dark text-white border-secondary mt-2" id="search-runs" placeholder="Filter runs...">
+                            <div class="d-flex gap-2 mt-2">
+                                <button class="btn btn-xs btn-link text-secondary text-decoration-none p-0" id="btn-select-all">All</button>
+                                <span class="text-secondary">|</span>
+                                <button class="btn btn-xs btn-link text-secondary text-decoration-none p-0" id="btn-select-none">None</button>
                             </div>
                         </div>
+                        <div class="flex-grow-1 overflow-auto p-2 runs-list-wrapper" id="runs-list-container"></div>
                     </div>
-                    <div id="metrics-container"></div>
-                </div>
-            </div>
-
-            <div class="modal fade" id="new-project-modal" tabindex="-1">
-                <div class="modal-dialog">
-                    <div class="modal-content bg-dark-secondary">
-                        <div class="modal-header">
-                            <h5 class="modal-title text-orange">New project</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form id="new-project-form">
-                                <div class="mb-3">
-                                    <label for="project-name-input" class="form-label">Project name</label>
-                                    <input type="text" class="form-control" id="project-name-input" required>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-outline-secondary"
-                                data-bs-dismiss="modal">Cancel</button>
-                            <button type="button" class="btn btn-orange" id="create-project-btn">Create</button>
-                        </div>
+                    <div class="col-md-9 col-lg-10 dashboard-main p-3 p-md-4 bg-black">
+                        <div id="charts-container" class="row g-4"></div>
                     </div>
                 </div>
             </div>
 
-            <div class="modal fade" id="fullscreen-chart-modal" tabindex="-1">
-                <div class="modal-dialog modal-fullscreen">
-                    <div class="modal-content bg-dark-secondary">
-                        <div class="modal-header">
-                            <h5 class="modal-title text-orange" id="fullscreen-chart-title"></h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                        </div>
-                        <div class="modal-body">
-                            <div id="fullscreen-chart-container" style="width: 100%; height: 85vh;"></div>
-                        </div>
-                    </div>
-                </div>
+            <div id="loading-overlay" class="position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center bg-black bg-opacity-75 z-3 d-none">
+                <div class="spinner-border text-light" role="status"></div>
             </div>
-        </div>
+        </main>
+    </div>
 
-        <div id="loading-container" class="d-flex justify-content-center align-items-center vh-100">
-            <div class="text-center">
-                <div class="spinner-border text-orange mb-3" style="width: 3rem; height: 3rem;"></div>
-                <h4 class="text-orange">Loading...</h4>
+    <div class="modal fade" id="modal-new-project" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-surface border border-secondary border-opacity-25">
+                <div class="modal-header border-bottom border-secondary border-opacity-25">
+                    <h5 class="modal-title text-white">Create New Project</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="form-new-project">
+                        <label class="form-label text-secondary small">Project Name</label>
+                        <input type="text" class="form-control bg-dark text-white border-secondary" id="input-project-name" required>
+                        <div class="d-flex justify-content-end mt-4">
+                            <button type="button" class="btn btn-outline-secondary me-2" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-light">Create</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="modal-fullscreen" tabindex="-1">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content bg-black">
+                <div class="modal-header border-bottom border-secondary border-opacity-25 py-2">
+                    <h5 class="modal-title text-white" id="fullscreen-title">Metric</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body p-0 position-relative">
+                    <div class="chart-wrapper h-100 w-100 p-4">
+                        <canvas id="canvas-fullscreen"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="toast-container position-fixed bottom-0 end-0 p-3"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="scripts.js"></script>
 </body>
-
 </html>
